tests/snapshots/run_wpt_conformance__onnx_equal_float16_5D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "equal.https.any.js",
    "equal float16 5D tensors",
    "onnx",
    "PASS",
)
